# algotrade

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  comms.py  hello.txt  newcomms.py  trader.cc
